# sms-gateway-android

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: config.py  events.py  main.py  routes.py  services.py  utils.py
typings/plyer/: __init__.pyi  utils.pyi
typings/plyer/facades/: __init__.pyi  accelerometer.pyi  audio.pyi  barometer.pyi  battery.pyi  bluetooth.pyi  brightness.pyi  call.pyi  camera.pyi  compass.pyi  cpu.pyi  devicename.pyi  email.pyi  filechooser.pyi  flash.pyi  gps.pyi  gravity.pyi  gyroscope.pyi  humidity.pyi  irblaster.pyi  keystore.pyi  light.pyi  notification.pyi  orientation.pyi  processors.pyi  proximity.pyi  screenshot.pyi  sms.pyi  spatialorientation.pyi  storagepath.pyi  stt.pyi  temperature.pyi  tts.pyi  uniqueid.pyi  vibrator.pyi  wifi.pyi
